@@ -1,0 +1,9 @@
+This is an example of using ELK as a bootstrap program.
+This example is designed to run on on a ARM vexpress-a9. The linker scripts
+configure ELK to run from the board's flash.
+
+Currently supported configuration(s):
+Linux:
+  None
+ELK:
+  arm-elk-engeabi
