@@ -1,7 +1,0 @@
-This is a simple thread and command test program.
-
-Currently supported configuration(s):
-Linux:
-  None
-ELK:
-  arm-elk-engeabi
